<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mainbar_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonLightType2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonLightType1"
        android:layout_alignBottom="@+id/buttonLightType1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="26dp"
        android:background="@drawable/btnbar_background"
        android:text="@string/lightType1" />

    <Button
        android:id="@+id/buttonLightType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="27dp"
        android:background="@drawable/btnbar_background"
        android:text="@string/lightType2" />

    <Button
        android:id="@+id/buttonSavOnTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLightType2"
        android:layout_alignLeft="@+id/buttonLightType2"
        android:layout_alignRight="@+id/buttonLightType1"
        android:background="@drawable/btnbar_background"
        android:text="@string/saveInTagButton" />

    <TextView
        android:id="@+id/textViewRxDat"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_alignLeft="@+id/textViewStatic"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonLightType1"
        android:layout_below="@+id/textViewStatic"
        android:layout_marginBottom="26dp"
        android:background="@drawable/setbar_background"
        android:minHeight="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLightType2"
        android:layout_alignRight="@+id/buttonLightType1"
        android:layout_below="@+id/buttonLightType2"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:minHeight="20dp"
        android:text="@string/reDatStatic" />

    <TextView
        android:id="@+id/textViewCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewRxDat"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textViewRxDat"
        android:gravity="center"
        
        android:text="@string/company" />

    <EditText
        android:id="@+id/editTextTxDat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSavOnTag"
        android:layout_alignLeft="@+id/buttonSavOnTag"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonSavOnTag"
        android:gravity="top"
        android:background="@drawable/inputbar_background"
        android:ems="10"
        android:hint="@string/InputDatPlease"
        android:maxLines="10"
        android:maxWidth="57dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSavOnTag"
        android:layout_alignLeft="@+id/buttonSavOnTag"
        android:layout_marginBottom="43dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTxDat"
        android:layout_below="@+id/editTextTxDat" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/buttonLightType2" />

</RelativeLayout>